
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2022 JUL 25a
  * in model/fluid/_Favre-Reynolds/fluid.c
    - in write_model_fluid_template(), added templates for body forces and heat addition
    - in read_model_fluid_actions_2(), calls read_model_fluid_actions_Fbody_Qadd()
    - in read_model_fluid_actions(), initialize Qadd and Fbody
  * in model/fluid/_Favre-Reynolds/fluid.hh and model/fluid/_Navier-Stokes_perfect/fluid.hh
    - added #define _FLUID_FBODY_QADD
  * in model/fluid/_Favre-Reynolds/fluid_source.c
    - in find_Sstar(), added Qadd and Fbody contributions
  * in model/fluid/_Navier-Stokes_perfect/fluid.c
    - in read_model_fluid_actions_2(), replaced all the coding by a call to 
      read_model_fluid_actions_Fbody_Qadd()
  * in model/share/fluid_share.c
    - added read_model_fluid_actions_Fbody_Qadd()
  * in tools/chemkin2cfdwarp.c
    - fixed bugs that lead to a crash when called with no flags
    

2022 JUL 24a
  * in model/share/emfield_share.c
    - in find_E_at_interface(), fixed a bug: the discretization stencil used invalid nodes
      when in the presence of a magnetic field
      

2022 JUL 23a
  * in model/share/emfield_share.c
    - in find_J_at_node_from_Jstar_at_interfaces(), some of the asserts checking if the node is valid
      were changed for TYPELEVEL_EMFIELD instead of TYPELEVEL_FLUID
      

2022 JUL 22a
  * in tools/
    - added chemkin2cfdwarp.c by Spencer LaFoley 
  * in tools/Makefile
    - added chemkin2cfdwarp to targets and sources sections. Also added chemkin2cfdwarp build rules.
  * in tools/README
    - added chemkin2cfdwarp.c to C Tools* list with a description.
    

2022 JUL 20a
  * in model/chem/_C2H4_Air_Plasma_30s/chem.c